# mdb-esp32-cashless

./: .gitignore  .gitmodules  .project  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEV.md  LICENSE  PROD.md  README.md  test_realtime.py
.claude/: launch.json  settings.local.json
.github/: FUNDING.yml
.github/workflows/: build-firmware.yml  release.yml
3D-Printed/: README.md
3D-Printed/mdb-slave/: MDB-Slave-PCB-Holder.f3d  (+1 more)
Android/: README.md  settings.gradle
Android_ble/: README.md  settings.gradle
Docker/: .env  .env.example  README.md  docker-compose.mqtt.yml  docker-compose.n8n.yml  docker-compose.vuejs.yml  docker-compose.yml  mqtt-credentials.sh  setup.sh  update.sh
android/: README.md
docker/: .env  README.md  docker-compose.mqtt.yml  docker-compose.vuejs.yml  docker-compose.yml
docs/: index.html  leaflet.html
kicad/: README.md  fp-info-cache  mdb-slave-esp32s3.kicad_pcb  mdb-slave-esp32s3.kicad_prl  mdb-slave-esp32s3.kicad_pro  mdb-slave-esp32s3.kicad_sch  ~mdb-slave-esp32s3.kicad_pcb.lck  ~mdb-slave-esp32s3.kicad_sch.lck
management-frontend/: .env.example  .gitignore  Dockerfile  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
mdb-esp32s3/: CMakeLists.txt  sdkconfig
mdb-master-esp32/: .cproject  .project  CMakeLists.txt  README.md  sdkconfig
mdb-master-esp32s3/: CMakeLists.txt  README.md  sdkconfig
mdb-master-esp32s3/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  mdb-master-esp32s3.c  webui_server.c  webui_server.h
mdb-slave-esp32s3/: .cproject  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
mdb-slave-esp32s3-webui/: CMakeLists.txt  sdkconfig
mdb-slave-esp32s3/main/: CMakeLists.txt  Kconfig.projbuild  bleprph.h  eva-dts.c  eva-dts.h  idf_component.yml  mdb-slave-esp32s3.c  mdb_9th.c  mdb_9th.h  mdb_qibixx.c  mdb_qibixx.h  nimble.c  nimble.h  rest_server.c  rpc-auth.c  rpc_auth.c  rpc_auth.h  rsacipher.c  rsacipher.h  webui_server.c  webui_server.h
mdb-slave-esp32s3/main/apps/your_app/: .cproject  .project
mqtt/: Dockerfile
n8n-workflows-store/: send-credit-mqtt-example.json  send-credit-mqtt-mercado-libre.json  send-credit-mqtt-picpay.json
(+375 files in other folders)
